--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -21,11 +21,11 @@
         justify-content: space-between;
         align-items: center;
         padding: 1rem 0;
-        background-image: linear-gradient(to bottom,$color-primary 10%,transparent 100%);
+        background-image: linear-gradient(to bottom,$color-primary 10%,rgba($color-primary,.6) 60%, transparent 100%);
         button{margin-right: 14rem;}
     }
     &-logo{
-        width: 80px;
+        width: 110px;
         padding: 1rem 2rem;
     }
     &-nav{
@@ -56,6 +56,7 @@
         flex-direction: column;
         align-items: center;
         img{
+            padding-top: 5rem;
             width: 55%;
         }
     }
