--- a/css/style.css
+++ b/css/style.css
@@ -132,11 +132,11 @@ p {
     justify-content: space-between;
     align-items: center;
     padding: 1rem 0;
-    background-image: linear-gradient(to bottom, #1c0033 10%, transparent 100%); }
+    background-image: linear-gradient(to bottom, #1c0033 10%, rgba(28, 0, 51, 0.6) 60%, transparent 100%); }
     .header-top button {
       margin-right: 14rem; }
   .header-logo {
-    width: 80px;
+    width: 110px;
     padding: 1rem 2rem; }
   .header-nav {
     display: flex;
@@ -169,6 +169,7 @@ p {
     flex-direction: column;
     align-items: center; }
     .header-main img {
+      padding-top: 5rem;
       width: 55%; }
   .header-text {
     justify-self: center;
