--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -4,12 +4,13 @@
     border-radius: 30px;
     margin: 8rem 0;
     padding: 4rem;
-    // @media only screen and (max-width:$bp-largest) {padding: 2rem; h4{padding: 0;} }
-    // @media only screen and (max-width:$bp-medium) {margin: 4rem 3rem; grid-column: 1/-1;}
+    @media only screen and (max-width:$bp-largest) {grid-column: 2/12;}
+    @media only screen and (max-width:$bp-medium) {margin-bottom: 3rem;}
     &-body{
         display: grid;
         grid-template-columns: repeat(2,1fr);
         gap: 4rem;
+        @media only screen and (max-width:$bp-medium) {grid-template-columns: 1fr;}
     }
     &-box{
         padding: 3rem;
