--- a/sass/review.scss
+++ b/sass/review.scss
@@ -6,18 +6,19 @@
     background-attachment: fixed;
     padding:7rem 1.5rem;
     grid-column: 1/-1;
-    
+    @media only screen and (max-width:$bp-medium) {padding:3rem 1rem;}
     &-main{
         display: grid;
         grid-template: repeat(7, 5vw)/repeat(8, 1fr);
         gap: 2.5rem;
+        @media only screen and (max-width:$bp-large) {gap: 1rem; grid-template: repeat(7, 8vw)/repeat(8, 1fr);}
     }
     &-shape{
         width: 100%;
         height: 100%;
         position: relative;
         transition: all .5s;
-
+        
         &-1{ grid-area:1/1/3/3 ;}
         &-2{ grid-area:1/3/4/6;}
         &-3{ grid-area: 1/6/3/7;}
@@ -36,10 +37,12 @@
         &:hover .gallery-caption{
             opacity: 1;
             transform: translate(-50% , -50%) scale(1.1);
+            @media only screen and (max-width:$bp-medium) {display: none;}
         }
         &:hover .gallery-img{
             filter: brightness(0.3) blur(2px);
             transform: scale(1.08);
+            @media only screen and (max-width:$bp-medium) {filter: brightness(1) blur(0);}
         }
     }
     &-caption{
@@ -55,9 +58,7 @@
         text-align: center;
         transition: all .5s;
         
-        // &-small{
-        //     font-size: 1.2rem;
-        // }
+        @media only screen and (max-width:$bp-largest) {h5{display: none;}}
     }
     &-btn{
         text-decoration: none;
@@ -68,6 +69,7 @@
         color: $color-secondary-dark;
         border-bottom: 2px solid $color-secondary-dark;
         span{display: none;}
+        @media only screen and (max-width:$bp-largest) {font-size: 1.4rem;}
         &:hover{
             background-color: $color-secondary-dark;
             color: $color-secondary-lighter;
