--- a/sass/steps.scss
+++ b/sass/steps.scss
@@ -6,10 +6,14 @@
     background-size: cover;
     background-attachment: fixed;
     clip-path: polygon(0 20%, 100% 0, 100% 80%, 0 100%);
+    @media only screen and (max-width:$bp-largest) {padding: 15rem 3rem;}
+    @media only screen and (max-width:$bp-medium) {padding:17rem 3rem;}
     &-box{
         display: flex;
         justify-content: space-evenly;
         align-items: center;
+        @media only screen and (max-width:$bp-large) {justify-content: space-between;}
+        @media only screen and (max-width:$bp-medium) {flex-direction: column;}
         h3{
             font-size: 2.7rem;
             background-color: #170128;
@@ -20,9 +24,13 @@
     &-text{
         width: 30%;
         padding: 4rem 5rem;
+        @media only screen and (max-width:$bp-largest) {width: 40%;}
+        @media only screen and (max-width:$bp-medium) {width: 80%; text-align: center;}
     }
     img{
         width: 30%;
-        
+        @media only screen and (max-width:$bp-largest) {width: 40%;}
+        @media only screen and (max-width:$bp-large) {width: 45%;}
+        @media only screen and (max-width:$bp-medium) {width: 70%;}
     }  
 }
