--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -31,7 +31,7 @@
     }
     
     &-main{
-        padding-top: 5rem;
+        padding-top: 11rem;
         flex: 1;
         display: flex;
         justify-content: flex-end;
@@ -50,9 +50,6 @@
         width: 45%;
         @media only screen and (max-width:$bp-largest) {width: 70%;}
         @media only screen and (max-width:$bp-medium) {width: 85%;}
-        &-box{
-
-        }
     }
 }
 
@@ -68,7 +65,6 @@
         border-radius: 50%;
         z-index: 2000;
         cursor: pointer;
-
     }
 
     &-background{
@@ -78,13 +74,14 @@
         position: fixed;
         top: 0;
         left: 0;
-        background-image:linear-gradient(to bottom,$color-secondary-darker,rgba($color-secondary,.7));
+        background-image:linear-gradient(to bottom,$color-primary-dark,rgba($color-primary-dark,.6));
         transition: all 1s ;
     }
 
     &-nav{
-        height: 50vh;
-        width: 0;
+        height: 0;
+        width: fit-content;
+        text-align: left;
         position: fixed;
         top: 50%;
         left: 50%;
@@ -92,9 +89,9 @@
         z-index: 1500;
         opacity: 0;
         transform-origin: right;
-        transition: all ;
-        transition-delay: .3s;
-        display: none;
+        transition: all .5s;
+        pointer-events: none;
+        cursor: not-allowed;
     }
     &-list{
         list-style: none;
@@ -106,9 +103,8 @@
             font-size: 2.5rem;
             font-weight: 700;
             color: white;
+            margin-top: 2rem;
             text-decoration: none;
-            background-image: linear-gradient(120deg, transparent 0%, transparent 50%,white 50%);
-            background-size: 270%;
             transition: all .5s;
             span{
                 margin-right: 1.5rem;
@@ -117,9 +113,8 @@
         }
         &:hover,
         &:active{
-            background-position: 100%;
-            color: $color-primary-dark ;
-            transform: translateX(-1rem);
+            color: $color-secondary-dark ;
+            transform: translateY(-.7rem) scale(1.15);
         }
     }
 
@@ -127,9 +122,10 @@
         height: 200rem;
     }
     &-checkbox:checked ~ &-nav{
-        display: block;
         opacity: 1;
-        width: 100%;
+        height: 50vh;
+        pointer-events: auto;
+        cursor: not-allowed;
     }
 
     &-icon{
