added animation to header text

--- a/css/style.css
+++ b/css/style.css
@@ -147,6 +147,12 @@ p {
     justify-content: flex-end;
     flex-direction: column;
     align-items: center; }
+    .header-main h1 {
+      animation: moveInRight 1s ease-in; }
+    .header-main h4 {
+      animation: moveInLeft 1s ease-in; }
+    .header-main button {
+      animation: moveInTop 1s ease-in; }
     .header-main img {
       padding-top: 8rem;
       width: 50%; }
@@ -282,21 +288,32 @@ p {
     transform: translateX(10rem); }
   80% {
     opacity: 1;
-    transform: translateX(-4px); }
+    transform: translateX(-5px); }
   100% {
     opacity: 1;
     transform: translate(0); } }
 
-@keyframes moveOutRight {
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem); }
+  80% {
+    opacity: 1;
+    transform: translateX(5px); }
+  100% {
+    opacity: 1;
+    transform: translate(0); } }
+
+@keyframes moveInTop {
   0% {
     opacity: 1;
-    transform: translateX(0); }
-  20% {
+    transform: translateY(10rem); }
+  80% {
     opacity: 1;
-    transform: translateX(-4px); }
+    transform: translateY(-5px); }
   100% {
-    opacity: 0;
-    transform: translateX(10); } }
+    opacity: 1;
+    transform: translate(0); } }
 
 .story {
   grid-row: 3/4;
