--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,8 @@
 @import "base";
 @import "header";
-@import "steps";
-@import "features";
-@import "review";
+@import "story";
+@import "service";
+@import "gallery";
 @import "footer";
 @import "clients";
 @import "cta";
